--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "tailwind": "tailwindcss -i ./src/tailwind.css -o ./src/index.css --watch"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-query": "^5.80.6",
     "axios": "^1.9.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
